test(bloomfilter): use Murmur3 hash rather than Java hashCode
It's quite simple to create a collision with Java's hashCode implementation so I added a test that
reproduces the collision to force the use of MurMur3 (which can also collide but is less likely)